# FilesNamesChanger_23-24_JoseDorta

./: CMakeLists.txt  LICENSE  README.md
src/: ErrorManageClass.cc  ErrorManageClass.h  FileClass.cc  FileClass.h  FolderClass.cc  FolderClass.h  main.cc  prueba.cc
